[package]
name = "rust-htmx"
authors = ["Davide Ferrero"]
description = "Rust-Axum-Askama-HTMX: Crafting a Lightweight Embedded Web Server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }